// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Form/Uploader Default 1`] = `
.c0 {
  position: relative;
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <label
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        label
      </label>
      <label
        htmlFor="id"
        style={
          Object {
            "cursor": "pointer",
            "display": "block",
            "fontSize": 18,
            "lineHeight": "24px",
            "paddingBottom": 30,
            "width": "calc(100% - 70px)",
          }
        }
      >
        Select a file
      </label>
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <label
          htmlFor="id"
          style={
            Object {
              "position": "relative",
              "top": 10,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": 0,
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M16 42V32h3v7h23v-7h3v10H16zm14.5-30.121l9.06 9.06-2.12 2.122-5.441-5.441L32 33h-3l-.001-15.378-5.438 5.439-2.122-2.122 9.061-9.06z"
              />
            </svg>
          </div>
        </label>
      </div>
      <input
        aria-hidden={true}
        id="id"
        name="name"
        onChange={[Function]}
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
          }
        }
        theme={
          Object {
            "background": "#000",
            "border": "#2F2F36",
            "button": Object {
              "background": "#1d1d20",
              "text": "#FFF",
            },
            "buttonDisabled": Object {
              "background": "#1d1d20",
              "text": "#71737e",
            },
            "card": Object {
              "background": "#1d1d20",
              "border": "#FFF",
              "label": "#71737e",
              "text": "#FFF",
            },
            "checkbox": Object {
              "border": "#2F2F36",
              "text": "#FFF",
            },
            "colors": Object {
              "black": "#000",
              "coolGray": "#a6a7aa",
              "darkGrey": "#1d1d20",
              "lightGrey": "#71737e",
              "mediumGray": "#2F2F36",
              "red": "#f21e29",
              "veryLightPink": "#f0efef",
              "white": "#FFF",
              "yellow": "#be8f00",
            },
            "dataGrid": Object {
              "background": "#000",
              "text": "#71737e",
            },
            "error": "#f21e29",
            "header": Object {
              "border": "#2F2F36",
              "text": "#FFF",
            },
            "icon": Object {
              "background": "#1d1d20",
              "fill": "#FFF",
              "fillInverse": "#000",
            },
            "input": Object {
              "text": "#FFF",
            },
            "inverseButton": Object {
              "background": "#FFF",
              "text": "#000",
            },
            "label": Object {
              "border": "#2F2F36",
              "text": "#71737e",
            },
            "menu": Object {
              "background": "#000",
              "text": "#FFF",
            },
            "providerContainer": Object {
              "minHeight": "100vh",
            },
            "radioButton": Object {
              "active": Object {
                "background": "#FFF",
                "fill": "#1d1d20",
              },
              "border": "#FFF",
              "text": "#FFF",
              "unActive": Object {
                "background": "#1d1d20",
                "dot": "#FFF",
                "fill": "#FFF",
              },
            },
            "secondaryText": "#71737e",
            "select": Object {
              "background": "#1d1d20",
              "border": "#000",
            },
            "stepper": Object {
              "active": "#FFF",
              "background": "#1d1d20",
            },
            "tab": Object {
              "active": "#FFF",
              "hover": "#FFF",
              "normal": "#2F2F36",
            },
            "table": Object {
              "background": Object {
                "body": "#000",
                "header": "#1d1d20",
              },
              "border": Object {
                "body": "#1d1d20",
                "header": "#000",
              },
              "text": Object {
                "body": "#FFF",
                "header": "#71737e",
              },
            },
            "text": "#FFF",
            "textArea": Object {
              "background": "#000",
              "text": "#FFF",
            },
            "textField": Object {
              "error": "#f21e29",
              "label": "#71737e",
            },
            "typography": Object {
              "h1": Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
              },
              "h2": Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
              },
              "h3": Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "18px",
                "fontWeight": 600,
              },
              "p": Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "18px",
                "fontWeight": 200,
              },
              "pre": Object {
                "fontFamily": "Hack, monospace",
                "fontSize": "18px",
              },
              "span": Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "14px",
              },
            },
            "warning": "#be8f00",
          }
        }
        type="file"
      />
    </div>
    <label
      htmlFor="id"
      id="dropZone-id"
      onDrop={[Function]}
      style={
        Object {
          "alignItems": "center",
          "background": "#000",
          "border": "2px dashed #2F2F36",
          "borderRadius": 10,
          "cursor": "copy",
          "display": "flex",
          "height": "calc(100% - 10px)",
          "justifyContent": "center",
          "left": 0,
          "lineHeight": "50px",
          "opacity": 0,
          "position": "absolute",
          "textAlign": "center",
          "top": 5,
          "transition": "opacity 200ms ease-in-out",
          "visibility": "hidden",
          "width": "100%",
        }
      }
    >
      Drop here
    </label>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Form/Uploader With error 1`] = `
.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #f21e29;
  margin: -20px 0 20px 0;
  font-size: 0.9em;
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <label
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        label
      </label>
      <label
        htmlFor="id"
        style={
          Object {
            "cursor": "pointer",
            "display": "block",
            "fontSize": 18,
            "lineHeight": "24px",
            "paddingBottom": 30,
            "width": "calc(100% - 70px)",
          }
        }
      >
        Select a file
      </label>
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <label
          htmlFor="id"
          style={
            Object {
              "position": "relative",
              "top": 10,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": 0,
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M16 42V32h3v7h23v-7h3v10H16zm14.5-30.121l9.06 9.06-2.12 2.122-5.441-5.441L32 33h-3l-.001-15.378-5.438 5.439-2.122-2.122 9.061-9.06z"
              />
            </svg>
          </div>
        </label>
      </div>
      <input
        aria-hidden={true}
        id="id"
        name="name"
        onChange={[Function]}
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
          }
        }
        theme={
          Object {
            "background": "#000",
            "border": "#2F2F36",
            "button": Object {
              "background": "#1d1d20",
              "text": "#FFF",
            },
            "buttonDisabled": Object {
              "background": "#1d1d20",
              "text": "#71737e",
            },
            "card": Object {
              "background": "#1d1d20",
              "border": "#FFF",
              "label": "#71737e",
              "text": "#FFF",
            },
            "checkbox": Object {
              "border": "#2F2F36",
              "text": "#FFF",
            },
            "colors": Object {
              "black": "#000",
              "coolGray": "#a6a7aa",
              "darkGrey": "#1d1d20",
              "lightGrey": "#71737e",
              "mediumGray": "#2F2F36",
              "red": "#f21e29",
              "veryLightPink": "#f0efef",
              "white": "#FFF",
              "yellow": "#be8f00",
            },
            "dataGrid": Object {
              "background": "#000",
              "text": "#71737e",
            },
            "error": "#f21e29",
            "header": Object {
              "border": "#2F2F36",
              "text": "#FFF",
            },
            "icon": Object {
              "background": "#1d1d20",
              "fill": "#FFF",
              "fillInverse": "#000",
            },
            "input": Object {
              "text": "#FFF",
            },
            "inverseButton": Object {
              "background": "#FFF",
              "text": "#000",
            },
            "label": Object {
              "border": "#2F2F36",
              "text": "#71737e",
            },
            "menu": Object {
              "background": "#000",
              "text": "#FFF",
            },
            "providerContainer": Object {
              "minHeight": "100vh",
            },
            "radioButton": Object {
              "active": Object {
                "background": "#FFF",
                "fill": "#1d1d20",
              },
              "border": "#FFF",
              "text": "#FFF",
              "unActive": Object {
                "background": "#1d1d20",
                "dot": "#FFF",
                "fill": "#FFF",
              },
            },
            "secondaryText": "#71737e",
            "select": Object {
              "background": "#1d1d20",
              "border": "#000",
            },
            "stepper": Object {
              "active": "#FFF",
              "background": "#1d1d20",
            },
            "tab": Object {
              "active": "#FFF",
              "hover": "#FFF",
              "normal": "#2F2F36",
            },
            "table": Object {
              "background": Object {
                "body": "#000",
                "header": "#1d1d20",
              },
              "border": Object {
                "body": "#1d1d20",
                "header": "#000",
              },
              "text": Object {
                "body": "#FFF",
                "header": "#71737e",
              },
            },
            "text": "#FFF",
            "textArea": Object {
              "background": "#000",
              "text": "#FFF",
            },
            "textField": Object {
              "error": "#f21e29",
              "label": "#71737e",
            },
            "typography": Object {
              "h1": Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
              },
              "h2": Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 100,
              },
              "h3": Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "18px",
                "fontWeight": 600,
              },
              "p": Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "18px",
                "fontWeight": 200,
              },
              "pre": Object {
                "fontFamily": "Hack, monospace",
                "fontSize": "18px",
              },
              "span": Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "14px",
              },
            },
            "warning": "#be8f00",
          }
        }
        type="file"
      />
    </div>
    <label
      htmlFor="id"
      id="dropZone-id"
      onDrop={[Function]}
      style={
        Object {
          "alignItems": "center",
          "background": "#000",
          "border": "2px dashed #2F2F36",
          "borderRadius": 10,
          "cursor": "copy",
          "display": "flex",
          "height": "calc(100% - 10px)",
          "justifyContent": "center",
          "left": 0,
          "lineHeight": "50px",
          "opacity": 0,
          "position": "absolute",
          "textAlign": "center",
          "top": 5,
          "transition": "opacity 200ms ease-in-out",
          "visibility": "hidden",
          "width": "100%",
        }
      }
    >
      Drop here
    </label>
    <div
      className="c1"
    >
      error
    </div>
  </div>
</div>
`;
